--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-project-two",
-  "homepage": "htpps://chocomaxie.github.io/petCareTwo",
+  "homepage": "https://chocomaxie.github.io/petCareTwo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
